--- a/.github/workflows/aml-build-batch-endpoint-DEV.yml
+++ b/.github/workflows/aml-build-batch-endpoint-DEV.yml
@@ -10,22 +10,21 @@ on:
     branches:
       - dev
     paths:
-      - 'src/AzureML_BatchAPI/DigitalToolboxTalkHazards_Pipeline/src/**'
-      - 'src/AzureML_BatchAPI/DigitalToolboxTalkIncident_Pipeline/src/**'
-      - 'src/AzureML_BatchAPI/EnhancedSearch_Pipeline/src/**'
+      - 'AzureML/TrainingPipeline/pipeline_build.py'
+      - 'AzureML/TrainingPipeline/src/**'
 
 # Run the aml build and publish endpoint job for DEV
 jobs:
   migrate-rebuild-publish:
-    uses: SEAdvancedAnalyticsOrg/HazardsAndControls-IAA/.github/workflows/aml_rebuild_batch_endpoint_BASE.yml@dev
+    uses: SEAdvancedAnalyticsOrg/HazardsAndControls-IAA/.github/workflows/aml-build-batch-endpoint-BASE.yml@dev
     with:
-      RESOURCEGROUP: iaadevarmrgp002
+      RESOURCEGROUP: iaasbxarmrgp003
       LOCATION: westus2
-      WORKSPACE: iaadevarmmlwuw2002
-      DEFAULTCLUSTER: iaadevarmmlwuw2002/computes/cpu-cluster
-      ADGROUP: SG-IAA-DEV-AML-MI
-      DEFAULTSTORAGE: iaadevarmstauw2002
-      SUBSCRIPTION: SuncorEnergyIT-DEV
+      WORKSPACE: iaasbxarmmlwuw2033
+      DEFAULTCLUSTER: iaasbxarmmlwuw2033/computes/cpu-cluster
+      ADGROUP: SG-IAA-SBX-AML-MI
+      DEFAULTSTORAGE: iaasbxarmstauw2031
+      SUBSCRIPTION: SuncorABOSandbox
       REPOPATH: dev
     secrets: 
-      azure-sp-credential: ${{ secrets.AML_CRED_IAADEV2002 }}
+      azure-sp-credential: ${{ secrets.SP_IAASBXARMMLWUW2033 }}
