--- a/.github/workflows/aml-build-batch-endpoint-BASE.yml
+++ b/.github/workflows/aml-build-batch-endpoint-BASE.yml
@@ -62,7 +62,7 @@ jobs:
         creds: ${{ secrets.azure-sp-credential }}
 
     - name: Whitelist the IP address of the Github Runner
-      run: bash whitelist-ip-add.sh ${{ inputs.DEFAULTSTORAGE }} ${{ inputs.SUBSCRIPTION }} ${{ inputs.RESOURCEGROUP }} dev
+      run: bash whitelist-ip-add.sh ${{ inputs.DEFAULTSTORAGE }} ${{ inputs.SUBSCRIPTION }} ${{ inputs.RESOURCEGROUP }} ${{ inputs.REPOPATH }}
       working-directory: Resources/AzureML/cli
       continue-on-error: false
         
@@ -71,13 +71,13 @@ jobs:
       working-directory: Resources/AzureML/cli
       continue-on-error: false
     
-#     - name: build aml pipeline endpoint and publish
-#       run: bash -x ../../Resources/AzureML/cli/run-job.sh pipeline.yml
-#       working-directory: AzureML/TrainingPipeline
+    - name: build aml pipeline endpoint and publish
+      run: bash -x ../../Resources/AzureML/cli/run-job.sh pipeline.yml
+      working-directory: AzureML/TrainingPipeline
       
     - name: Remove IP of Github runner from storage account
       if: always()
-      run: bash whitelist-ip-remove.sh ${{ inputs.DEFAULTSTORAGE }} ${{ inputs.SUBSCRIPTION }} ${{ inputs.RESOURCEGROUP }} dev
+      run: bash whitelist-ip-remove.sh ${{ inputs.DEFAULTSTORAGE }} ${{ inputs.SUBSCRIPTION }} ${{ inputs.RESOURCEGROUP }} ${{ inputs.REPOPATH }}
       working-directory: Resources/AzureML/cli
       continue-on-error: false
       
