--- a/.github/workflows/aml-build-batch-endpoint-DEV.yml
+++ b/.github/workflows/aml-build-batch-endpoint-DEV.yml
@@ -3,15 +3,15 @@ name: AML Build Batch Pipeline Endpoint DEV
 # Controls when the workflow will run
 on:
 
-  # Allows you to run this workflow manually from the Actions tab.  This will only work for the default branch.
+  # Allows you to run this workflow manually from the Actions tab. This will only work for the default branch.
   workflow_dispatch:
   
-  pull_request:
+  push:
     branches:
       - dev
-#     paths:
-#       - 'AzureML/TrainingPipeline/pipeline_build.py'
-#       - 'AzureML/TrainingPipeline/src/**'
+    paths:
+      - 'AzureML/TrainingPipeline/pipeline_build.py'
+      - 'AzureML/TrainingPipeline/src/**'
 
 # Run the aml build and publish endpoint job for DEV
 jobs:
@@ -25,6 +25,6 @@ jobs:
       ADGROUP: SG-IAA-SBX-AML-MI
       DEFAULTSTORAGE: iaasbxarmstauw2031
       SUBSCRIPTION: SuncorABOSandbox
-      REPOPATH: feature
+      REPOPATH: dev
     secrets: 
       azure-sp-credential: ${{ secrets.SP_IAASBXARMMLWUW2033 }}
