--- a/.github/workflows/aml-build-batch-endpoint-BASE.yml
+++ b/.github/workflows/aml-build-batch-endpoint-BASE.yml
@@ -42,7 +42,7 @@ on:
         required: true
         description: The service principal credential
 jobs:
-  rebuild-publish:
+  build-publish-aml-endpoint:
     runs-on: ubuntu-latest
     steps:
     
