--- a/.github/workflows/build-deploy-docker-image-BASE.yml
+++ b/.github/workflows/build-deploy-docker-image-BASE.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Docker Image to Azure WebApp
+name: Build and Deploy Docker Image to Azure WebApp BASE
 
 # Controls when the workflow will run
 on:
