--- a/.github/workflows/build-deploy-docker-image-DEV.yml
+++ b/.github/workflows/build-deploy-docker-image-DEV.yml
@@ -10,7 +10,7 @@ on:
     branches:
       - dev
     paths: 
-      - 'AzureML/RealTimeInference'
+      - 'AzureML/RealTimeInference/**'
       
 # Build and deploy docker image to Azure webapp
 jobs:
