--- a/.github/workflows/build-deploy-docker-image-DEV.yml
+++ b/.github/workflows/build-deploy-docker-image-DEV.yml
@@ -14,7 +14,7 @@ on:
       
 # Build and deploy docker image to Azure webapp
 jobs:
-  migrate-rebuild-publish:
+  build-deploy-docker-image:
     uses: ./.github/workflows/build-deploy-docker-image-BASE.yml
     with:
       JFROG_REGISTRY: suncorenergy-aap-iaa-docker-dev-local.jfrog.io
