--- a/.github/workflows/build-deploy-docker-image-BASE.yml
+++ b/.github/workflows/build-deploy-docker-image-BASE.yml
@@ -60,20 +60,20 @@ jobs:
         tags: ${{ inputs.JFROGREGISTRY }}/${{ inputs.IMAGENAME }}:${{ github.sha }}
         file: ./AzureML/RealTimeInference/Dockerfile
         context: ./AzureML/RealTimeInference/
-# deploy:
-#     runs-on: ubuntu-latest
-#     needs: build
-#     environment:
-#       name: 'production'
-#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-#     steps:
-#     - name: Deploy Docker container to webapp
-#       id: deploy-to-webapp
-#       uses: azure/webapps-deploy@v2
-#       with:
-#         app-name: ${{ inputs.WEBAPP }}
-#         slot-name: 'production'
-#         publish-profile: ${{ secrets.AzureAppService_PublishProfile_10b09be6cd2c41289649d15ef8a8c19c }}
-#         images: '${{ inputs.JFROGREGISTRY }}/${{ inputs.IMAGENAME }}:${{ github.sha }}'
+    steps:
+    - name: Deploy Docker container to webapp
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ inputs.WEBAPP }}
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        images: '${{ inputs.JFROGREGISTRY }}/${{ inputs.IMAGENAME }}:${{ github.sha }}'
         
