--- a/.github/workflows/build-deploy-docker-image-BASE.yml
+++ b/.github/workflows/build-deploy-docker-image-BASE.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Login to Azure CLI
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.azure-sp-credential }}
+        creds: ${{ secrets.SP_IAASBXARMMLWUW2033 }}
         
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1  
