--- a/.github/workflows/build-deploy-docker-image-BASE.yml
+++ b/.github/workflows/build-deploy-docker-image-BASE.yml
@@ -28,6 +28,9 @@ on:
       jfrog-password:
         required: true
         description: JFrog password
+      azure-sp-credential:
+        required: true
+        description: azure login
 jobs:
   build:
     runs-on: ubuntu-latest
