--- a/.github/workflows/aml-build-batch-endpoint-BASE.yml
+++ b/.github/workflows/aml-build-batch-endpoint-BASE.yml
@@ -1,4 +1,4 @@
-name: AzureML Build Batch Pipeline Endpoint BASE
+name: BASE - Build/Publish AML Batch Endpoint
 
 # Controls when the workflow will run
 on:
@@ -20,15 +20,15 @@ on:
       DEFAULTSTORAGE:
         required: true
         type: string
-        description: Default AzureML Storage name
+        description: Default AzureML Storage Account name
       SUBSCRIPTION:
         required: true
         type: string
-        description: Subscription of the Active Directory Group
+        description: Subscription of the AzureML Workspace
     secrets:
-      azure-sp-credential:
+      azure-credential:
         required: true
-        description: AzureML Service Principal Credential
+        description: Azure Credential
 jobs:
   build-publish-aml-endpoint:
     runs-on: ubuntu-latest
@@ -45,25 +45,25 @@ jobs:
     - name: Login to Azure CLI
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.azure-sp-credential }}
+        creds: ${{ secrets.azure-credential }}
 
     - name: Whitelist the IP Address of the Github Runner
       run: bash whitelist-ip-add.sh ${{ inputs.DEFAULTSTORAGE }} ${{ inputs.SUBSCRIPTION }} ${{ inputs.RESOURCEGROUP }} ${{ inputs.REPOPATH }}
-      working-directory: Resources/AzureML/cli
+      working-directory: ./cli
       continue-on-error: false
         
     - name: Setup AZ ML CLI Extension and Default Workspace
       run: bash setup.sh ${{ inputs.RESOURCEGROUP }} ${{ inputs.LOCATION }} ${{ inputs.WORKSPACE }}
-      working-directory: Resources/AzureML/cli
+      working-directory: ./cli
       continue-on-error: false
     
     - name: Build AzureML Pipeline and Publish Endpoint
-      run: bash -x ../../Resources/AzureML/cli/run-job.sh pipeline.yml
-      working-directory: AzureML/TrainingPipeline
+      run: bash -x ./cli/run-job.sh pipeline.yml
+      working-directory: .
       
     - name: Remove IP of Github Runner from Storage Account
       if: always()
       run: bash whitelist-ip-remove.sh ${{ inputs.DEFAULTSTORAGE }} ${{ inputs.SUBSCRIPTION }} ${{ inputs.RESOURCEGROUP }} ${{ inputs.REPOPATH }}
-      working-directory: Resources/AzureML/cli
+      working-directory: ./cli
       continue-on-error: false
       
