--- a/.github/workflows/aml-build-batch-endpoint-DEV.yml
+++ b/.github/workflows/aml-build-batch-endpoint-DEV.yml
@@ -24,4 +24,4 @@ jobs:
       DEFAULTSTORAGE: iaasbxarmstauw2031
       SUBSCRIPTION: SuncorABOSandbox
     secrets: 
-      azure-credential: ${{ secrets.AZURE_CREDENTIALS }}
+      azure-credential: ${{ secrets.SP_IAASBXARMMLWUW2033 }}
