--- a/.github/workflows/aml-build-batch-endpoint-BASE.yml
+++ b/.github/workflows/aml-build-batch-endpoint-BASE.yml
@@ -49,21 +49,21 @@ jobs:
 
     - name: Whitelist the IP Address of the Github Runner
       run: bash whitelist-ip-add.sh ${{ inputs.DEFAULTSTORAGE }} ${{ inputs.SUBSCRIPTION }} ${{ inputs.RESOURCEGROUP }} ${{ inputs.REPOPATH }}
-      working-directory: ./cli
+      working-directory: ./Resources/AzureML/cli
       continue-on-error: false
         
     - name: Setup AZ ML CLI Extension and Default Workspace
       run: bash setup.sh ${{ inputs.RESOURCEGROUP }} ${{ inputs.LOCATION }} ${{ inputs.WORKSPACE }}
-      working-directory: ./cli
+      working-directory: ./Resources/AzureML/cli
       continue-on-error: false
     
     - name: Build AzureML Pipeline and Publish Endpoint
-      run: bash -x ./cli/run-job.sh pipeline.yml
+      run: bash -x ./Resources/AzureML/cli/run-job.sh pipeline.yml
       working-directory: .
       
     - name: Remove IP of Github Runner from Storage Account
       if: always()
       run: bash whitelist-ip-remove.sh ${{ inputs.DEFAULTSTORAGE }} ${{ inputs.SUBSCRIPTION }} ${{ inputs.RESOURCEGROUP }} ${{ inputs.REPOPATH }}
-      working-directory: ./cli
+      working-directory: ./Resources/AzureML/cli
       continue-on-error: false
       
