--- a/.github/workflows/aml-build-batch-endpoint-BASE.yml
+++ b/.github/workflows/aml-build-batch-endpoint-BASE.yml
@@ -58,7 +58,7 @@ jobs:
       continue-on-error: false
     
     - name: Build AzureML Pipeline and Publish Endpoint
-      run: bash -x ./Resources/AzureML/cli/run-job.sh pipeline.yml
+      run: bash -x ../../Resources/AzureML/cli/run-job.sh pipeline.yml
       working-directory: ./AzureML/TrainingPipeline
       
     - name: Remove IP of Github Runner from Storage Account
