--- a/.github/workflows/build-deploy-docker-image-BASE.yml
+++ b/.github/workflows/build-deploy-docker-image-BASE.yml
@@ -27,6 +27,9 @@ on:
       azure-credential:
         required: true
         description: Azure credential
+      azure-webapp-publish-profile:
+        required: true
+        description: Azure Webapp Publish Profile
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -77,6 +80,6 @@ jobs:
       with:
         app-name: ${{ inputs.WEBAPP }}
         slot-name: 'production'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        publish-profile: ${{ secrets.azure-webapp-publish-profile }}
         images: '${{ inputs.JFROGREGISTRY }}/${{ inputs.IMAGENAME }}:${{ github.sha }}'
         
