--- a/.github/workflows/build-deploy-docker-image-BASE.yml
+++ b/.github/workflows/build-deploy-docker-image-BASE.yml
@@ -83,3 +83,45 @@ jobs:
         publish-profile: ${{ secrets.azure-webapp-publish-profile }}
         images: '${{ inputs.JFROGREGISTRY }}/${{ inputs.IMAGENAME }}:${{ github.sha }}'
         
+    - name: Set Web App ACR authentication
+      uses: Azure/appservice-settings@v1
+      with:
+       app-name: ${{ inputs.WEBAPP }}
+       app-settings-json: |
+        [
+          {
+            "name": "APPINSIGHTS_INSTRUMENTATIONKEY",
+            "value": "7928d564-f509-41b7-afd1-c918396168e0",
+            "slotSetting": false
+          },
+          {
+            "name": "APPLICATIONINSIGHTS_CONNECTION_STRING",
+            "value": "InstrumentationKey=7928d564-f509-41b7-afd1-c918396168e0;IngestionEndpoint=https://westus2-1.in.applicationinsights.azure.com/;LiveEndpoint=https://westus2.livediagnostics.monitor.azure.com/",
+            "slotSetting": false
+          },
+          {
+            "name": "DOCKER_REGISTRY_SERVER_PASSWORD",
+            "value": "${{ secrets.jfrog-password }}",
+            "slotSetting": false
+          },
+          {
+            "name": "DOCKER_REGISTRY_SERVER_URL",
+            "value": "https://${{ inputs.JFROGREGISTRY }}",
+            "slotSetting": false
+          },
+          {
+            "name": "DOCKER_REGISTRY_SERVER_USERNAME",
+            "value": "${{ secrets.jfrog-username }}",
+            "slotSetting": false
+          },
+          {
+            "name": "WEBSITES_CONTAINER_START_TIME_LIMIT",
+            "value": "1800",
+            "slotSetting": false
+          },
+          {
+            "name": "WEBSITES_PORT",
+            "value": "5000",
+            "slotSetting": false
+          }
+        ]
