--- a/AzureML/RealTimeInference/Dockerfile
+++ b/AzureML/RealTimeInference/Dockerfile
@@ -16,4 +16,4 @@ COPY model.pkl .
 
 EXPOSE 5000
 
-CMD [ "flask", "run", "--host=0.0.0.0", "--port=5000"]
+CMD [ "flask", "run", "--host=0.0.0.0", "--port=5000", "--debug"]
