--- a/azure-ml/batch-endpoint/config.json
+++ b/azure-ml/batch-endpoint/config.json
@@ -1,5 +1,5 @@
 {
-    "subscription_id": "ef8e1d90-7e58-45fc-a7e5-e608efc32cf1",
-    "resource_group": "iaasbxarmrgp003",
-    "workspace_name": "iaasbxarmmlwuw2033"
+    "subscription_id": "XXX",
+    "resource_group": "XXX",
+    "workspace_name": "XXX"
 }
