--- a/.github/workflows/aml-build-managed-online-endpoint-BASE.yml
+++ b/.github/workflows/aml-build-managed-online-endpoint-BASE.yml
@@ -32,12 +32,12 @@ jobs:
 
     - name: Whitelist the IP Address of the Github Runner
       run: bash whitelist-ip-add.sh ${{ vars.DEFAULTSTORAGE }} ${{ vars.SUBSCRIPTION }} ${{ vars.RESOURCEGROUP }}
-      working-directory: ./cli
+      working-directory: ./azure-ml/cli
       continue-on-error: false
         
     - name: Setup AZ ML CLI Extension and Default Workspace
       run: bash setup.sh ${{ vars.RESOURCEGROUP }} ${{ vars.LOCATION }} ${{ vars.WORKSPACE }}
-      working-directory: ./cli
+      working-directory: ./azure-ml/cli
       continue-on-error: false
     
     - name: Build and Publish Managed Online Endpoint
@@ -47,6 +47,6 @@ jobs:
     - name: Remove IP of Github Runner from Storage Account
       if: always()
       run: bash whitelist-ip-remove.sh ${{ vars.DEFAULTSTORAGE }} ${{ vars.SUBSCRIPTION }} ${{ vars.RESOURCEGROUP }}
-      working-directory: ./cli
+      working-directory: ./azure-ml/cli
       continue-on-error: false
       
