--- a/azure-ml/managed-online-endpoint/config.json
+++ b/azure-ml/managed-online-endpoint/config.json
@@ -1,5 +1,5 @@
 {
     "subscription_id": "ef8e1d90-7e58-45fc-a7e5-e608efc32cf1",
     "resource_group": "iaasbxarmrgp003",
-    "workspace_name": "iaasbxarmstauw2031"
+    "workspace_name": "iaasbxarmmlwuw2033"
 }
